--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,6 @@
 
     <!-- <script crossorigin src="https://unpkg.com/react@16.8.4/umd/react.development.js"></script> -->
     <!-- <script crossorigin src="https://unpkg.com/react-dom@16.8.4/umd/react-dom.development.js"></script> -->
-    <script src="App.jsx"></script>
+    <script src="script.js"></script>
   </body>
 </html>
