--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    <div id="modal"></div>
     <div id="root">Fuck off</div>
 
     <!-- <script crossorigin src="https://unpkg.com/react@16.8.4/umd/react.development.js"></script> -->
